# nyxlink

./: .gitignore  README.md
engine/core/: Cargo.toml  README.md
engine/core/src/: capability.rs  crypto.rs  errors.rs  identity.rs  lib.rs  memory.rs  protocol.rs  storage.rs
engine/core/src/capability/: capability.rs  constraint.rs  delegation.rs  scope.rs  token.rs  validation.rs
engine/core/src/crypto/: aead.rs  algorithms.rs  dh.rs  hash.rs  kdf.rs  keys.rs  rng.rs  signature.rs
engine/core/src/crypto/keys/: dh.rs  signing.rs
engine/core/src/errors/: core.rs
engine/core/src/errors/internal/: capability.rs  identity.rs  input.rs  primitive.rs  protocol.rs  resource.rs  storage.rs
engine/core/src/identity/: identity.rs  keys.rs
engine/core/src/memory/: buffer.rs  lock.rs  secret.rs  zeroize.rs
engine/core/src/protocol/: noise.rs
engine/core/src/protocol/noise/: pattern.rs  state.rs
engine/core/src/protocol/ratchet/: state.rs
engine/core/src/protocol/wire/: types.rs
engine/core/src/storage/: backend.rs  entry.rs  orchestrator.rs
engine/core/src/storage/entry/: kind.rs
engine/core/src/utils/handles/: registry.rs  types.rs
