[package]
name = "nyxlink-engine-core"
version = "0.1.0"
edition = "2024"
description = "Engine Core for secure P2P messaging app. Handles Noise, ratchets, sessions, messages, identity, capability system and memory safety,"
repository = "https://github.com/jdluques/nyxlink"
readme = "README.md"

[dependencies]
log = "0.4.29"
libc = "0.2.178"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Memory"] }
zeroize = "1.8.2"
sha2 = "0.10.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
debug = false
